--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@strapi/provider-upload-cloudinary": "^4.4.5",
     "@strapi/strapi": "4.4.5",
     "@vscode/sqlite3": "^5.0.8",
-    "better-sqlite3": "7.4.6"
+    "better-sqlite3": "7.4.6",
+    "strapi-plugin-vercel-deploy": "^1.3.1"
   },
   "author": {
     "name": "A Strapi developer"
