--- a/.env
+++ b/.env
@@ -11,3 +11,9 @@ CLOUDINARY_KEY=553796143519187
 CLOUDINARY_SECRET=imPIOdLNH8n-QYU-_u16qUIVWQg
 CLOUDINARY_FOLDER=strapi_news_media
 CLOUDINARY_URL=cloudinary://553796143519187:imPIOdLNH8n-QYU-_u16qUIVWQg@drcloud21
+
+
+
+VERCEL_DEPLOY_PLUGIN_HOOK="https://api.vercel.com/v1/integrations/deploy/prj_fr9OHMrpOViNcpco9EqK4UcTVp43/3d5rRnynCO"
+VERCEL_DEPLOY_PLUGIN_API_TOKEN="6QqqOX8QouwfkA8H4TULt9x5"
+VERCEL_DEPLOY_PLUGIN_APP_FILTER="strapi-api"
