--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "strapi-api",
+  "you-tut": "https://youtu.be/-9k6mQF7Kjg",
+  "you-tut2-tufan": "https://youtu.be/XdHjERK1nyk",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
